# xolariq

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  WIKI.md  desktop.ini
.github/workflows/: ci.yml
app/src/: progress.html  progress.js  settings.html  settings.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: README.md  icon.icns
app/src-tauri/src/: cli.rs  commands.rs  main.rs  notify.rs  state.rs
app/src-tauri/wix/: shellext.wxs
crates/xolariq-core/: Cargo.toml
crates/xolariq-core/src/: detect.rs  error.rs  ffmpeg.rs  format.rs  kind.rs  lib.rs  output.rs  progress.rs  queue.rs  settings.rs  tools.rs
crates/xolariq-core/src/convert/: archive.rs  audio.rs  document.rs  image.rs  mod.rs  video.rs
crates/xolariq-shell/: Cargo.toml
crates/xolariq-shell/src/: lib.rs  windows.rs
crates/xolariq-shellext/: Cargo.toml
crates/xolariq-shellext/src/: exports.rs  factory.rs  formats.rs  lib.rs  registration.rs  root.rs  subcommands.rs
docs/: Build-and-Release.md  Conversion-Engine.md  Developer-Guide.md  Home.md  Installation-and-First-Run.md  Supported-Formats.md  System-Architecture.md  Tauri-App-and-UI.md  User-Guide.md  Windows-Shell-Integration.md  _Sidebar.md
