[workspace]
resolver = "2"
members = [
    "crates/xolariq-core",
    "crates/xolariq-shell",
    "crates/xolariq-shellext",
    "app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MPL-2.0"
repository = "https://github.com/neikiri/xolariq-dev"
authors = ["Xolariq Contributors"]

[workspace.dependencies]
# Workspace-wide pinned dependencies. Crates opt in via `workspace = true`.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "sync", "process", "io-util", "fs", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
parking_lot = "0.12"
uuid = { version = "1.7", features = ["v4", "serde"] }
directories = "5.0"
clap = { version = "4.5", features = ["derive"] }

# Internal crates
xolariq-core = { path = "crates/xolariq-core", version = "0.1.0" }
xolariq-shell = { path = "crates/xolariq-shell", version = "0.1.0" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
